# engine-yolo

./: README.md  pyproject.toml
engine_yolo/: __init__.py  __main__.py  model_handler.py  protocol.py  result_mapper.py
scripts/: infer.py
